--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,17 @@
-GitPython==3.1.17
-
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+itsdangerous==2.0.1
 Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-lxml==4.6.3
+joblib==1.0.1
 MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-multitasking==0.0.9
-mypy==0.812
-mypy-extensions==0.4.3
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
 numpy==1.20.3
 pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.2.0
-
-
-pyzmq==22.1.0
-requests==2.25.1
-Send2Trash==1.5.0
+python-dateutil==2.8.1
+pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.6.3
 six==1.16.0
-smmap==4.0.0
-streamlit==0.82.0
-terminado==0.10.0
-testpath==0.5.0
-toml==0.10.2
-
-
+sklearn==0.0
+threadpoolctl==2.1.0
+Werkzeug==2.0.1
